--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 
 <script src="js/Three.js"></script>
 <script src="js/Detector.js"></script>
-<script src="js/Stats.js"></script>
 <script src="js/OrbitControls.js"></script>
 <script src="js/THREEx.KeyboardState.js"></script>
 <script src="js/THREEx.FullScreen.js"></script>
 <script src="js/THREEx.WindowResize.js"></script>
-
 <!-- jQuery code to display an information button and box when clicked. -->
 <script src="js/jquery-1.9.1.js"></script>
 <script src="js/jquery-ui.js"></script>
@@ -41,7 +39,7 @@
 				<div class="col-md-6">
 					<div class="centered">
 						<div id="ThreeJS"></div>
-						<script src="js/main.js"></script>
+						
 					</div>
 				</div>
 					<div class="col-md-6" style="padding: 50px;">
@@ -52,10 +50,23 @@
 						</div>
 						<div class="row" style="padding: 25px;">
 						<div class="col-xs-12">
+							<form oninput="changeOptions()">
+								Show Axis <input type="checkbox" id="axisHelper" onclick="changeOptions()" checked/>
+								Lock Grid Size <input type="checkbox" id="lockGridSize" onclick="changeOptions()"/><br />
+								X Grid: <input type="checkbox" id="xGrid" onclick="changeOptions()"/>
+								Y Grid: <input type="checkbox" id="yGrid" onclick="changeOptions()" />
+								Z Grid: <input type="checkbox" id="zGrid" onclick="changeOptions()" /><br />
+								<p id="currentGridSize">Grid Detail: 20</p>
+								<input style="width: 50%;" id="incrementValue" type="range" min="1" max="50" step="1" value="20" /><br/>
+								<p id="currentPointSize">Point Size: 20</p>
+								<input style="width: 50%;" id="pointSize" type="range" min="0.1" max="3" step="0.1" value="0.5" />
+							</form>
+							
+							<p>Sample Point Sets</p><br />
 							<div class="btn-group">
-								<button class="btn btn-primary" onclick="toggleDebug();">Toggle Text</button>
-								<button class="btn btn-success" onclick="changeShape(0);">Cube</button>
-								<button class="btn btn-success" onclick="changeShape(1);">Dodecahedron</button>
+								<button class="btn btn-success btn-xs" onclick="samplePoints(0);">Cube</button>
+								<button class="btn btn-success btn-xs" onclick="samplePoints(1);">Dodecahedron</button>
+								<button class="btn btn-success btn-xs" onclick="samplePoints(2);">Random Scatter</button>
 							</div>
 						</div>
 						</div>
@@ -78,7 +89,7 @@
 			</div>
 		</div>
 
-
+<script src="js/main.js"></script>
 
 </body>
 </html>
