--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </div>
 
 
-	<div class="container">
+	<div class="container-fluid">
 			<div class="row">
 				<div class="col-xs-12">
 					<h1>3D Points Plotter</h1>
