--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
 								X Grid: <input type="checkbox" id="xGrid" onclick="changeOptions()"/>
 								Y Grid: <input type="checkbox" id="yGrid" onclick="changeOptions()" />
 								Z Grid: <input type="checkbox" id="zGrid" onclick="changeOptions()" /><br /><hr />
+								<form onclick="changeOptions()">
 								<p id="currentGridSize">Grid Detail: 20</p>
 								<input id="incrementValue" type="range" min="1" max="50" step="1" value="20" /><br/>
 								<p id="currentPointSize">Point Size: 20</p>
-								<input id="pointSize" type="range" min="0.1" max="3" step="0.1" value="0.5" /><br /><hr />
+								<input id="pointSize" type="range" min="0.1" max="5" step="0.1" value="0.5" /><br /><hr />
+								</form>
 							<p>Sample Point Sets</p><br />
 							<div>
 								<button class="btn btn-success btn-xs" onclick="samplePoints(0);">Cube</button>
