improvements to default settings

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<div class="row" style="padding: 25px;">
 								<h3>Viewing Options</h3><br />
 								Show Axis <input type="checkbox" id="axisHelper" onclick="changeOptions()" checked/>
-								Lock Grid Size <input type="checkbox" id="lockGridSize" onclick="changeOptions()"/><br />
+								Lock Grid Size <input type="checkbox" id="lockGridSize" onclick="changeOptions()" checked/><br />
 								X Grid: <input type="checkbox" id="xGrid" onclick="changeOptions()"/>
 								Y Grid: <input type="checkbox" id="yGrid" onclick="changeOptions()" />
 								Z Grid: <input type="checkbox" id="zGrid" onclick="changeOptions()" /><br /><hr />
