--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<title>3D Points Plotter</title>
+	<title>3D Point Plotter</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,8 +22,12 @@
 <script src="js/info.js"></script>
 
 <div id="infoButton"></div>
-<div id="infoBox" title="Demo Information">
-3D points plotter built in THREEjs
+<div id="infoBox" title="3D Point Plotter Info">
+								<h4>Author: Karl Diab</h4><br/>
+								<p>A simple but functional 3D point plotter utility written in JavaScript using the THREE.js library. You may
+									link to this page from elsewhere or use the source code, but please give credit where it is due.
+								</p>
+								<a href="https://github.com/karldiab/3DPointsPlotter"><button class="btn btn-primary">Source Code</button></a>
 </div>
 
 
@@ -56,11 +60,7 @@
 							</div>
 							<div id="authorInfo">
 								<hr />
-								<h4>Author: Karl Diab</h4><br/>
-								<p>A simple but functional 3D Points plotter utility written in JavaScript using the THREE.js library. You may
-									link to this page from elsewhere or use the source code, but please give credit where it is due.
-								</p>
-								<a href="https://github.com/karldiab/3DPointsPlotter"><button class="btn btn-primary">Source Code</button></a>
+
 							</div>
 					</div>
 					<div id="points">
