--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									
 									<hr />
 									<h4>Plotted Points</h4><br/>
-									<select name="pointsOutput" id="pointsOutput" size="8" multiple ></select>
+									<select name="pointsOutput" id="pointsOutput" size="8" multiple onchange="pointSelector.call(this, event);")></select>
 								
 								</div>
 					</div>
