Semi large update. Changed background color, points to spheres instead of cubes, started using updated minified three.js, heavily improved mouse selector feature (still with bugs), and improved fluidity of program :)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 </head>
 <body>
 
-<script src="js/Three.js"></script>
+<script src="js/three.min.js"></script>
 <script src="js/Detector.js"></script>
 <script src="js/OrbitControls.js"></script>
+<script src="js/Projector.js"></script>
+<script src="js/CanvasRenderer.js"></script>
 <script src="js/THREEx.WindowResize.js"></script>
 <!-- jQuery code to display an information button and box when clicked. -->
 <script src="js/jquery-1.9.1.js"></script>
@@ -31,9 +33,8 @@
 </div>
 
 
-	<div class="container-fluid">
 			<div class="row">
-				<div class="col-xs-12">
+				<div class="col-xs-12" id="title">
 					<h1>3D Points Plotter</h1>
 				</div>
 			</div>
@@ -85,7 +86,6 @@
 								
 								</div>
 					</div>
-		</div>
 
 <script src="js/main.js"></script>
 
