--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>3D Point Plotter</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" media="screen">
+	<link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel=stylesheet href="css/main.css"/>
@@ -50,8 +50,8 @@
 								<form oninput="changeOptions()">
 								<p id="currentGridSize">Grid Detail: 20</p>
 								<input id="incrementValue" type="range" min="1" max="50" step="1" value="20" /><br/>
-								<p id="currentPointSize">Point Size: 20</p>
-								<input id="pointSize" type="range" min="0.1" max="5" step="0.1" value="0.5" /><br /><hr />
+								<p id="currentPointSize">Point Size: 1.5</p>
+								<input id="pointSize" type="range" min="0.1" max="5" step="0.1" value="1.5" /><br /><hr />
 								</form>
 							<p>Sample Point Sets</p><br />
 							<div>
@@ -82,8 +82,11 @@
 									
 									<hr />
 									<h4>Plotted Points</h4><br/>
-									<select name="pointsOutput" id="pointsOutput" size="8" multiple onchange="listSelector.call(this, event);")></select>
-								
+									<select name="pointsOutput" id="pointsOutput" size="8" onchange="listSelector.call(this, event);")></select>
+                                    <div class="btn-group">
+                                    <button class="btn btn-warning btn-sm" onclick="removePoints(1)">Remove Selected</button>
+                                    <button class="btn btn-danger btn-sm" onclick="removePoints(0)">Clear All</button>
+                                    </div>
 								</div>
 					</div>
 
