--- a/index.html
+++ b/index.html
@@ -25,17 +25,42 @@
 
 <div id="infoButton"></div>
 <div id="infoBox" title="3D Point Plotter Info">
-								<h4>Author: Karl Diab</h4><br/>
+								<h3>Author: Karl Diab</h4><br/>
 								<p>A simple but functional 3D point plotter utility written in JavaScript using the THREE.js library. You may
 									link to this page from elsewhere or use the source code, but please give credit where it is due.
 								</p>
+                                <h3>Instructions<h4/>
+                                <h4>Camera</h4>
+                                <p>Drag the mouse to rotate camera and scroll to zoom. <br/>
+                                <h4>Adding Points</h4>
+                                   Add 3D points on the right, either individually or in bulk. To add a point individually, enter the X Y Z coordinates 
+                                   at the top and press "Add" To add points in bulk, simply paste the points (including any additional characters) in the "Enter Multiple Points" window. 
+                                   The program will interpret the points then plot and list them. <br/>
+                                   <h4>Manipulating Points</h4>
+                                   To clear all points click "Clear All" below the "Plotted Points" window. An individual point can be 
+                                   deleted by pressing "Remove Selected."
+                                   Any point can be selected by clicking on the plotted point, or from the "Plotted Points" window.
+                                   <br/>
+                                   
+
+                                </p>
 								<a href="https://github.com/karldiab/3DPointsPlotter"><button class="btn btn-primary">Source Code</button></a>
+                                <a href="http://karldiab.com"><button class="btn btn-success">Website</button></a>
+                                <h3>Comments/Suggestions</h4>
+                                               <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'&'+'#'+'1'+'0'+'9'+';'+'a'+'i'+'l'+'t'+'&'+'#'+'1'+'1'+'1'+';'+
+'&'+'#'+'5'+'8'+';'+'&'+'#'+'3'+'7'+';'+'&'+'#'+'5'+'4'+';'+'&'+'#'+'6'+'6'+';'+'a'+'&'+'#'+'1'+'1'+
+'4'+';'+'&'+'#'+'3'+'7'+';'+'6'+'C'+'&'+'#'+'6'+'4'+';'+'&'+'#'+'3'+'7'+';'+'&'+'#'+'5'+'4'+';'+'B'+
+'%'+'6'+'1'+'&'+'#'+'3'+'7'+';'+'7'+'2'+'%'+'&'+'#'+'5'+'4'+';'+'C'+'%'+'&'+'#'+'5'+'4'+';'+'&'+'#'+
+'5'+'2'+';'+'&'+'#'+'1'+'0'+'5'+';'+'a'+'b'+'&'+'#'+'4'+'6'+';'+'c'+'o'+'&'+'#'+'3'+'7'+';'+'6'+'D'+
+"'"+'>'+'k'+'&'+'#'+'9'+'7'+';'+'r'+'l'+'&'+'#'+'6'+'4'+';'+'k'+'a'+'r'+'l'+'d'+'i'+'&'+'#'+'9'+'7'+
+';'+'&'+'#'+'9'+'8'+';'+'&'+'#'+'4'+'6'+';'+'&'+'#'+'9'+'9'+';'+'o'+'&'+'#'+'1'+'0'+'9'+';'+'<'+'/'+
+'a'+'>');</script><noscript>[Turn on JavaScript to see the email address]</noscript>
 </div>
 
 
 			<div class="row">
 				<div class="col-xs-12" id="title">
-					<h1>3D Points Plotter</h1>
+					<h1>3D Point Plotter</h1>
 				</div>
 			</div>
 						<div id="ThreeJS"></div>
@@ -80,7 +105,7 @@
 								<div id="outputPoints">
 									
 									<hr />
-									<h4>Plotted Points</h4><br/>
+									<h3>Plotted Points</h4><br/>
 									<select name="pointsOutput" id="pointsOutput" size="8" onchange="listSelector.call(this, event);")></select>
                                     <br/><div class="btn-group">
                                     <button class="btn btn-warning btn-sm" onclick="removePoints(1)">Remove Selected</button>
