fixed problem with links not opening in new windows

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <link rel=stylesheet href="css/jquery-ui.css" />
 <link rel=stylesheet href="css/info.css"/>
 <script src="js/info.js"></script>
-
+<div id="logo"><a target="_blank" href="http://www.karldiab.com"><img src="images/logoinverted32.png" alt="Logo" onclick="opennewtab('http://www.karldiab.com')"/></a></div>
 <div id="infoButton"></div>
 
 
@@ -125,8 +125,8 @@
                                    
 
                                 </p>
-								<a href="https://github.com/karldiab/3DPointPlotter"><button class="btn btn-primary">Source Code</button></a>
-                                <a href="http://karldiab.com"><button class="btn btn-success">Website</button></a>
+								<a target="_blank" href="https://github.com/karldiab/3DPointPlotter"><button class="btn btn-primary" onclick="opennewtab('https://github.com/karldiab/3DPointPlotter')">Source Code</button></a>
+                                <a target="_blank" href="http://www.karldiab.com"><button class="btn btn-success" onclick="opennewtab('http://www.karldiab.com')">Website</button></a>
                                 <h3>Comments/Suggestions</h4>
                                                <script>document.write('<'+'a'+' '+'h'+'r'+'e'+'f'+'='+"'"+'&'+'#'+'1'+'0'+'9'+';'+'a'+'i'+'l'+'t'+'&'+'#'+'1'+'1'+'1'+';'+
 '&'+'#'+'5'+'8'+';'+'&'+'#'+'3'+'7'+';'+'&'+'#'+'5'+'4'+';'+'&'+'#'+'6'+'6'+';'+'a'+'&'+'#'+'1'+'1'+
